Fixed links not showing images in learning section.

--- a/author/css/canvasser.css
+++ b/author/css/canvasser.css
@@ -319,8 +319,12 @@ a{
   max-height: 100px;
 }
 
+.imageblock{
+  display: block;
+}
+
 .imageid{
-  vertical-align:middle;
+  vertical-align: middle;
   font-size: 15px;
 }
 
